<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">A-Cube</string>
    <string name="actions">Actions</string>
    <string name="games">Games</string>
    <string name="acc_service_description" tools:ignore="MissingTranslation">Questo è l\'accessibility service A-Cube</string>
    <string name="channel_name">A-Cube notification</string>
    <string name="channel_description">Questa è una notifica di A-Cube acc service</string>
    <string name="noti_service_active_title">A-Cube è attivo</string>
    <string name="noti_service_active_text">Apri un gioco configurato per utilizzarlo con A-Cube</string>
    <string name="notification_active_config">Configurazione attiva</string>
    <string name="notification_no_config_title">Nessuna configurazione per</string>
    <string name="notification_no_config_text">Fai tap per aggiungere una configurazione.</string>
    <string name="alert_dialog_remove_game_title">Delete Game</string>
    <string name="alert_dialog_remove_game_text">Deleting the game will also delete the configurations associated with it.</string>
    <string name="alert_dialog_remove_action_title">Delete action</string>
    <string name="alert_dialog_remove_action_text">Deleting the action will delete all files associated with it, also some
        configurations may have that action.</string>
    <string name="alert_dialog_remove_conf_title">Delete configuration</string>
    <string name="alert_dialog_remove_conf_text">Deleting the configuration will remove all events and screens associated with it.
    </string>
    <string name="alert_dialog_remove_link_title">Delete Link</string>
    <string name="alert_dialog_remove_link_text">Are you sure you want to permanently delete the link?  </string>
    <string name="alert_dialog_delete_btn">Delete</string>
    <string name="alert_dialog_back_btn">Back</string>
    <string name="empty_links">No links found for this configuration, tap the \" + \" button to add one.</string>
    <string name="conf_list_tv1">Configurations</string>
    <string name="conf_list_tv2">Select a configuration to view its details</string>
    <string name="conf_list_tv2_empty">You haven\'t entered any configuration for this game yet</string>
    <string name="delete_conf_tv">Delete</string>
    <string name="name_conf_tv">Name</string>
    <string name="selected_conf_tv">Active</string>
    <string name="vocal_rec_state_tv">Vocal rec. \nstate</string>
    <string name="btn_vocal_rec_state_text_ok">Vocal rec. ok</string>
    <string name="btn_vocal_rec_state_text_not_possible">Vocal rec. not possible</string>
    <string name="btn_vocal_rec_state_text_update">Update vocal rec.</string>
    <string name="screen_list_tv1">Screens</string>
    <string name="screen_list_tv2">Select a screen to view its details</string>
    <string name="screen_list_tv2_empty">You haven\'t entered any yet screen for this configuration.</string>
    <string name="screen_list_tv3_empty">Tap \" + \" to add a screen.</string>
    <string name="screenActivityTitle">Screen %1$s</string>
    <string name="tapOnImageAlongside_tv">Tap on the image alongside to insert one screen</string>
    <string name="tapOnImageAbove_tv">Tap on the image above to insert one screen</string>
    <string name="eventListTitle_tv">Events</string>
    <string name="eventList_tv2">Select an event to view its details.</string>
    <string name="eventList_tv2_empty">You have not entered events for this screen</string>
    <string name="eventTv_no_screen">To add an event you must first enter a screen.</string>
    <string name="eventTv_add_event">Tap on \" Add event \" to add an event to this screen</string>
    <string name="eventBtn_add_event">Add event </string>
    <string name="delete_screen_btn">Delete screen</string>
    <string name="edit_screen_btn">Edit screen</string>
    <string name="screenNameTitle">Screen name</string>
    <string name="screenImageTitle">Image</string>
    <string name="saveBtn">Save</string>
    <string name="cancelBtn">Cancel</string>
    <string name="changeBtn">Change</string>
    <string name="newLink_title">New event | %1$s</string>
    <string name="editLink_title">Edit event | %1$s</string>
    <string name="Link_EventName_et">Event name</string>
    <string name="Link_SearchAction_tv">Action:</string>
    <string name="Link_SearchAction_btn">Select action</string>
    <string name="Link_SearchEventType_tv">Event type:</string>
    <string name="Link_SearchEventType_btn">Select type</string>
    <string name="Link_DurationTime_tv">Event duration:</string>
    <string name="Link_DurationTime_et">Insert duration</string>
    <string name="Link_SearchActionStop_tv">Action stop:</string>
    <string name="Link_SearchActionStop_btn">Select action stop</string>
    <string name="Link_MarkerSize_tv">Marker size</string>
    <string name="Link_MarkerColor_tv">Marker color:</string>
    <string name="Link_TapOnImageToAddMarker">Tap the image to add where to run the event.</string>
    <string name="Link_TapOnImageToEditMarker">Tap the image to edit where to run the event.</string>
    <string name="Link_NoPointSelected">You have not selected a point to hold the event</string>
    <string name="colorPickerTitle">Select a color</string>
    <string name="selectActionTitle_tv">Actions</string>
    <string name="selectActionEmpty_tv">There seems to be no actions available, go to the Actions section and add one</string>
    <string name="actionNotAvailable">Used in %1$s</string>
    <string name="actionNotAvailable2">Used in this screen</string>
    <string name="eventTypeTitle_tv">Events type</string>
    <string name="eventType_tv">Select the type of event you want to do</string>
    <string name="alertDeleteScreenTitle">Delete Screen</string>
    <string name="alertDeleteScreenText">Deleting the screen will also delete the events associated with it.</string>
    <string name="closeBtn">Ok</string>
    <string name="titleInfoScreenActivity">Screen details</string>
    <string name="title_training">Training in progress..</string>
    <string name="training_tv">We are training the vocal recognition system to recognize your voice</string>
    <string name="training_tv2">This will allow you to use the voice commands in the game you have configured</string>
    <string name="singleGameView_green_tv">Game configured correctly</string>
    <string name="singleGameView_orange_tv">Update vocal rec. necessary</string>
    <string name="singleGameView_red_tv">Game configured correctly</string>
    <string name="singleConfigurationView_tv">This configuration has:</string>
    <string name="singleConfigurationView_tv_events">- %1$d defined events </string>
    <string name="singleConfigurationView_tv_screens">- %1$d defined screens </string>
    <string name="fragment_add_config_title">Name the configuration</string>
    <string name="fragment_edit_config_title">Edit configuration\'s name</string>
    <string name="fragment_add_config_error_name">This name is already used in another configuration of this game!</string>
    <string name="fragment_add_config_error_empty_name">No name entered!</string>
    <string name="newVocalCommand_title">Vocal action</string>
    <string name="newVocalCommand_et">Action name</string>
    <string name="newVocalCommand_tv">Name the action then tap \" add vocal \"</string>
    <string name="newVocalCommand_btn">Add vocal</string>
    <string name="voiceRecorder_title">Registration</string>
    <string name="voiceRecorder_tv1">Make sure you are in a quiet place</string>
    <string name="voiceRecorder_tv2">Produce a simple and continuous sound for 5 seconds</string>
    <string name="voiceRecorder_tv3">When you\'re ready, tap \" Rec \" to start recording</string>
    <string name="fragment_edit_screenshot_title">Edit Screenshot</string>
    <string name="fragment_edit_screenshot_text_success">Image loaded successfully</string>
    <string name="fragment_edit_screenshot_text_wrong">Image not loaded successfully</string>
    <string name="fragment_edit_screenshot_text_upload">Upload screenshot</string>
    <string name="config_list_cell_no_defined_events">This configuration has no defined events</string>
    <string name="config_list_cell_one_defined_event">This configuration has one defined event</string>
    <string name="config_list_cell_more_defined_events">This configuration has %1$d defined events</string>
    <string name="single_link_view_action">Action: </string>
    <string name="tutorial">Tutorial</string>
    <string name="new_record">Record a new sound</string>
    <string name="new_button_tutorial">Register a new button</string>
    <string name="no_screenshot_added">You have not entered any screenshot for this configuration, tap the \" + \"
        button to add one. </string>
    <string name="select_screenshot_textview">Select the screen where you want to define the link.</string>
    <string name="file">File</string>
    <string name="file_deleted">the file has been removed successfully</string>
    <string name="file_delete_info">Warning! By deleting an audio file you will need to update the vocal models of all the configurations that used it</string>
    <string name="button_search">Change</string>
    <string name="continue_dialog">Continue</string>
    <string name="button_saved">Button saved</string>
    <string name="button_not_saved">Button not saved, connect a bluetooth device and press a button</string>
    <string name="button_not_saved2">A button with the same code already exists</string>
    <string name="button_deleted">Button deleted</string>
    <string name="insert_action_error">Insert the name of the action</string>
    <string name="insert_action_error2">An action with the same name already exists</string>
    <string name="defined_events">This configuration has %1$s defined events</string>
    <string name="undefined_events">This configuration has %1$s undefined events</string>
    <string name="new_conf">You have entered a new configuration</string>
    <string name="new_conf_error">Choose another name for the configuration</string>
    <string name="app_info">Loading apps info...</string>
    <string name="name">Name</string>
    <string name="action_name">Action Name</string>
    <string name="action_type">Action Type</string>
    <string name="device_id">Device ID</string>
    <string name="button_id">Button ID</string>
    <string name="delete_button">Delete Button</string>
    <string name="event_name">Event Name</string>
    <string name="event_type">Event Type</string>
    <string name="screenshot_description">Here is a screenshot of the game you want to configure</string>
    <string name="marker_description">the marker indicates where the action will be performed</string>
    <string name="marker_size">Marker Size</string>
    <string name="marker_color">Marker Color</string>
    <string name="input_duration">Input Duration</string>
    <string name="time">time in seconds</string>
    <string name="action_stop">Action-stop</string>
    <string name="delete">Delete</string>
    <string name="record_pointer">red: you re not recording  green: you are recording a new audio</string>
    <string name="records">record</string>
    <string name="stop">Stop</string>
    <string name="play_description">this button allows you to listen to the audio</string>
    <string name="stop_description">this button allows you to stop to the audio</string>
    <string name="delete_description">this button allows you to delete to the audio</string>
    <string name="new_button">Click the button of the external device you want to memorize.</string>
    <string name="button">Button</string>
    <string name="action">Action</string>
    <string name="device">Device</string>
    <string name="button_code">button code</string>
    <string name="device_code">device code</string>
    <string name="save">Save</string>
</resources>