<?xml version="1.0" encoding="UTF-8"?>

    <RelativeLayout
    tools:context=".voice.VoiceRecorder"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_height="142dp"
        android:layout_width="142dp"
        app:srcCompat="@drawable/no_recording"
        android:contentDescription="@string/record_pointer"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:id="@+id/recordingImage"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/regInizio"
        android:text="@string/records"
        android:layout_marginBottom="140dp"
        android:layout_marginStart="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/stop"
        android:text="@string/stop"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="80dp"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/regInizio"/>

</RelativeLayout>