<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/audio_item"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="11dp"
        android:textAlignment="center"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_toEndOf="@+id/audio_item"
        android:contentDescription="@string/play_description"
        app:srcCompat="@android:drawable/ic_media_play" />

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_toEndOf="@+id/pauseButton"
        android:contentDescription="@string/delete_description"
        app:srcCompat="@android:drawable/ic_delete" />

    <ImageButton
        android:id="@+id/pauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-1dp"
        android:layout_toEndOf="@+id/playButton"
        android:contentDescription="@string/stop_description"
        app:srcCompat="@android:drawable/ic_media_pause" />


</RelativeLayout>