<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="22dp"
    tools:context=".external_devices.KeyDetails">

    <TextView
        android:id="@+id/detail_action_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:text="@string/action_name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/detail_action_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_action_name"
        android:layout_alignStart="@+id/detail_action_name"
        android:layout_marginStart="0dp"
        android:layout_marginTop="22dp"
        android:text="@string/action_type"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/detail_id_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_action_type"
        android:layout_alignStart="@+id/detail_action_type"
        android:layout_marginStart="0dp"
        android:layout_marginTop="22dp"
        android:text="@string/device_id"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/detail_key_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_id_device"
        android:layout_alignStart="@+id/detail_id_device"
        android:layout_marginStart="0dp"
        android:layout_marginTop="22dp"
        android:text="@string/button_id"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/action_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/detail_action_name"
        android:layout_marginStart="25dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/detail_action_name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/action_type"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/action_name"
        android:layout_alignStart="@+id/action_name"
        android:layout_marginStart="0dp"
        android:layout_marginTop="22dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/detail_id_dev"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/action_type"
        android:layout_alignStart="@+id/action_name"
        android:layout_marginStart="0dp"
        android:layout_marginTop="22dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/detail_key_c"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_id_dev"
        android:layout_alignStart="@+id/action_name"
        android:layout_marginStart="0dp"
        android:layout_marginTop="22dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/deleteKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="60dp"
        android:text="@string/delete_button" />

</RelativeLayout>