<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Container"
    tools:context=".tab_games.NewLink">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="231dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="0dp"
                    android:layout_weight="1"
                    android:text="@string/event_name"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/eventName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:text="@string/event_type"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/eventType"
                    android:layout_width="224dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:editable="false"
                    android:focusable="false"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/searchEventType"
                    android:layout_width="133dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:text="@string/button_search"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="79dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/action"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/actionBox"
                    android:layout_width="127dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:editable="false"
                    android:focusable="false"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/searchAction"
                    android:layout_width="38dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:text="@string/button_search"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutTimed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="231dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/input_duration"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/durationTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:digits="0123456789."
                    android:ems="10"
                    android:hint="@string/time"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LayoutOnOff"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="79dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/action_stop"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/actionStopBox"
                    android:layout_width="127dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:editable="false"
                    android:focusable="false"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/searchActionStop"
                    android:layout_width="38dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:text="@string/button_search"
                    android:textSize="12sp" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/screenAndPointer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/screenshot"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_alignParentStart="false"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:contentDescription="@string/screenshot_description"
                    app:srcCompat="@drawable/image_not_found" />

                <ImageView
                    android:id="@+id/marker"
                    android:layout_width="130dp"
                    android:layout_height="106dp"
                    android:layout_alignStart="@+id/screenshot"
                    android:layout_alignTop="@+id/screenshot"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="14dp"
                    android:contentDescription="@string/marker_description"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/pointer" />

            </RelativeLayout>


            <TextView
                android:id="@+id/ErrorCordinate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="238dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/marker_size"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/markerSizeBar"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_gravity="left"
                android:layout_margin="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/marker_color"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/layoutColorTest"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_gravity="left"
                android:layout_margin="10dp"
                android:background="#CDFF0000"
                android:orientation="horizontal">

            </LinearLayout>

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/save"
                android:visibility="gone"/>

            <Button
                android:id="@+id/buttonDeleteLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:text="@string/delete"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatButtonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@android:drawable/ic_menu_save"
        app:backgroundTint="@color/trueGreen" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatButtonDeleteLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/floatButtonSave"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@android:drawable/ic_menu_delete"
        android:visibility="gone"
        app:backgroundTint="@color/falseRed" />

</RelativeLayout>
